<!--
  ~ ProjectTemplate
  ~
  ~ Created by artembirmin on 3/11/2022.
  -->

<resources>
    <string name="status_fib">Fibonacci status</string>
    <string name="minus">—</string>
    <string name="alert_button_ok">Ok</string>
    <string name="plus">+</string>
    <string name="counter_title">Counter</string>
    <string name="agreement">Yes</string>
    <string name="disagreement">Not</string>
    <string name="statistic">Statistic</string>
    <string name="press_count">Counter of pressing buttons:</string>
    <string name="minimum">Min:</string>
    <string name="maximum">Max:</string>
</resources>