<?xml version="1.0" encoding="utf-8"?><!--
  ~ ProjectTemplate
  ~
  ~ Created by artembirmin on 6/11/2022.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2F6">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/counter_title"
                    android:textAppearance="@style/ToolbarTitle" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tvCounterTitle"
            android:layout_width="69dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="296dp"
            android:gravity="center"
            android:text="@string/counter_title"
            android:textAppearance="@style/Text18Black.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />

        <Button
            android:id="@+id/btnDecrement"
            android:layout_width="48dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/minus"
            app:layout_constraintBottom_toBottomOf="@id/btnIncrement"
            app:layout_constraintEnd_toStartOf="@id/tvCounter"
            app:layout_constraintTop_toTopOf="@id/btnIncrement" />

        <TextView
            android:id="@+id/tvCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/Text18Black.Medium"
            app:layout_constraintBottom_toBottomOf="@id/btnIncrement"
            app:layout_constraintEnd_toStartOf="@id/btnIncrement"
            app:layout_constraintTop_toTopOf="@id/btnIncrement"
            tools:text="13" />

        <Button
            android:id="@+id/btnIncrement"
            android:layout_width="48dp"
            android:layout_height="42dp"
            android:layout_marginEnd="36dp"
            android:text="@string/plus"
            app:layout_constraintBottom_toBottomOf="@+id/tvCounterTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvCounterTitle" />

        <TextView
            android:id="@+id/tvFibTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/status_fib"
            android:textAppearance="@style/Text18Black.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCounterTitle" />

        <TextView
            android:id="@+id/tvFib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text18Black"
            app:layout_constraintBaseline_toBaselineOf="@id/tvFibTitle"
            app:layout_constraintEnd_toEndOf="@id/btnIncrement"
            app:layout_constraintStart_toStartOf="@id/btnDecrement"
            tools:text="Yes" />

        <Button
            android:id="@+id/btnStatistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:text="@string/statistic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFibTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>