<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2F6">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/statistic"
                    android:textAppearance="@style/ToolbarTitle" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tvCountPressing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:text="@string/press_count"
            android:textAppearance="@style/Text18Black.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />

        <TextView
            android:id="@+id/tvPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/Text18Black"
            app:layout_constraintStart_toEndOf="@+id/tvCountPressing"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            tools:text="1256" />

        <TextView
            android:id="@+id/tvMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="106dp"
            android:gravity="center"
            android:text="@string/minimum"
            android:textAppearance="@style/Text18Black.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCountPressing" />

        <TextView
            android:id="@+id/tvMinValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginTop="106dp"
            android:textAppearance="@style/Text18Black"
            app:layout_constraintStart_toEndOf="@+id/tvMin"
            app:layout_constraintTop_toBottomOf="@+id/tvCountPressing"
            tools:text="-25" />

        <TextView
            android:id="@+id/tvMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="212dp"
            android:gravity="center"
            android:text="@string/maximum"
            android:textAppearance="@style/Text18Black.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCountPressing" />

        <TextView
            android:id="@+id/tvMaxValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="212dp"
            android:textAppearance="@style/Text18Black"
            app:layout_constraintStart_toEndOf="@+id/tvMax"
            app:layout_constraintTop_toBottomOf="@+id/tvCountPressing"
            tools:text="131" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>